terraform/region/modules/region/elasticache.tf
resource "aws_security_group" "new_front_cache" {
  name_prefix = "${local.account_name_short}-${local.region_name}-new-front-cache"
  description = "Cache network access"
  vpc_id      = module.network.vpc.id
  tags        = local.front_component_tag

  lifecycle {
    create_before_destroy = true
  }
}

resource "aws_elasticache_subnet_group" "application_subnets" {
  name       = "${local.account_name_short}-${local.region_name}-elasticache-application-subnets"
  subnet_ids = module.network.application_subnets[*].id
}

resource "aws_elasticache_replication_group" "new_front_cache" {
  replication_group_id = "${local.account_name_short}-${local.region_name}-new-front-cache-rg"
  description          = "front cache replication group"
  parameter_group_name = "default.redis6.x"
  engine               = "redis"
  engine_version       = "6.2"
  # cache.t2.micro is an invalid node type for the london eu-west-2 region
  node_type                  = local.account.regions[data.aws_region.current.region].elasticache_node_type
  num_cache_clusters         = local.cache_cluster_count
  at_rest_encryption_enabled = true
  automatic_failover_enabled = true
  transit_encryption_enabled = true
  maintenance_window         = "wed:05:00-wed:09:00"
  snapshot_window            = "02:00-04:50"
  notification_topic_arn     = aws_sns_topic.cloudwatch_to_slack_elasticache_alerts.arn
  subnet_group_name          = aws_elasticache_subnet_group.application_subnets.name
  security_group_ids         = [aws_security_group.new_front_cache.id]

  tags = local.front_component_tag
  lifecycle {
    ignore_changes = [
      engine_version
    ]
  }
}

# new elasticache replication group so that we can rotate the auth token without downtime
resource "aws_elasticache_replication_group" "front_cache" {
  replication_group_id = "${local.account_name_short}-${local.region_name}-front-cache-rg"
  description          = "front cache replication group"
  parameter_group_name = "default.redis6.x"
  engine               = "redis"
  engine_version       = "7.1"
  # cache.t2.micro is an invalid node type for the london eu-west-2 region
  node_type                  = local.account.regions[data.aws_region.current.region].elasticache_node_type
  num_cache_clusters         = local.cache_cluster_count
  at_rest_encryption_enabled = true
  automatic_failover_enabled = true
  transit_encryption_enabled = true
  transit_encryption_mode    = "preferred"
  auth_token                 = data.aws_secretsmanager_secret_version.elasticache_auth_token.secret_string
  kms_key_id                 = data.aws_kms_alias.elasticache_encryption_key.target_key_arn
  auth_token_update_strategy = "ROTATE"
  maintenance_window         = "wed:05:00-wed:09:00"
  snapshot_window            = "02:00-04:50"
  notification_topic_arn     = aws_sns_topic.cloudwatch_to_slack_elasticache_alerts.arn
  subnet_group_name          = aws_elasticache_subnet_group.application_subnets.name
  security_group_ids         = [aws_security_group.new_front_cache.id]

  tags = local.front_component_tag
  lifecycle {
    ignore_changes = [
      engine_version
    ]
  }
}

locals {
  cache_cluster_count   = 2
  cache_member_clusters = tolist(aws_elasticache_replication_group.new_front_cache.member_clusters)
}
