terraform/region/modules/region/firewalled_network.tf


module "network" {
  source                              = "github.com/ministryofjustice/opg-terraform-aws-firewalled-network?ref=v1.1.0"
  aws_networkfirewall_firewall_policy = aws_networkfirewall_firewall_policy.main
  cidr                                = var.firewalled_vpc_cidr_range
  default_security_group_egress       = []
  default_security_group_ingress      = []
  enable_dns_hostnames                = true
  enable_dns_support                  = true
  network_firewall_enabled            = var.account.network_firewall.enabled
  shared_firewall_configuration = var.account.network_firewall.shared_firewall_configuration.enabled != true ? null : {
    account_id   = var.account.network_firewall.shared_firewall_configuration.account_id
    account_name = var.account.network_firewall.shared_firewall_configuration.account_name
  }
  providers = {
    aws = aws
  }
}

resource "aws_networkfirewall_firewall_policy" "main" {
  name = "main"

  firewall_policy {
    stateless_default_actions          = ["aws:forward_to_sfe"]
    stateless_fragment_default_actions = ["aws:forward_to_sfe"]

    stateful_engine_options {
      rule_order              = "DEFAULT_ACTION_ORDER"
      stream_exception_policy = "DROP"
    }
    stateful_rule_group_reference {
      resource_arn = aws_networkfirewall_rule_group.rule_file.arn
    }
  }
}

resource "aws_networkfirewall_rule_group" "rule_file" {
  capacity = 100
  name     = "main-${replace(filebase64sha256("${path.module}/network_firewall_rules.rules.tpl"), "/[^[:alnum:]]/", "")}"
  type     = "STATEFUL"
  rules = templatefile("${path.module}/network_firewall_rules.rules.tpl", {
    allowed_domains          = var.account.network_firewall.allowed_domains
    allowed_prefixed_domains = var.account.network_firewall.allowed_prefixed_domains
    }
  )
  lifecycle {
    create_before_destroy = true
  }
}

data "aws_route_tables" "firewalled_network_application" {
  filter {
    name   = "tag:Name"
    values = ["application-route-table"]
  }
  filter {
    name   = "vpc-id"
    values = [module.network.vpc.id]
  }
}

module "vpc_endpoints" {
  source                          = "./modules/vpc_endpoints"
  vpc_id                          = module.network.vpc.id
  application_subnets_cidr_blocks = module.network.application_subnets[*].cidr_block
  application_subnets_id          = module.network.application_subnets[*].id
  public_subnets_cidr_blocks      = module.network.public_subnets[*].cidr_block
  application_route_tables        = data.aws_route_tables.firewalled_network_application
  # codecatalyst endpoints were not available in eu-west-2
  codecatalyst_endpoints_enabled = local.account.regions[data.aws_region.current.region].codecatalyst_endpoints_enabled
  management_account_id          = data.aws_caller_identity.management.account_id
  data_lpa_api_account_id        = var.account.data_lpa_api_account_id
  allowed_s3_resource_arns = [
    # allowed buckets
    "arn:aws:s3:::online-lpa-pdf-cache-${var.account_name}-${data.aws_region.current.region}",
    "arn:aws:s3:::online-lpa-${var.account_name}-${data.aws_region.current.region}-lb-access-logs",
    "arn:aws:s3:::online-lpa-${var.account_name}-lb-access-logs",
    # allowed objects
    "arn:aws:s3:::online-lpa-pdf-cache-${var.account_name}-${data.aws_region.current.region}/*",
    "arn:aws:s3:::online-lpa-${var.account_name}-${data.aws_region.current.region}-lb-access-logs/*",
    "arn:aws:s3:::online-lpa-${var.account_name}-lb-access-logs/*",
  ]
  providers = {
    aws.region = aws
  }
}

resource "aws_db_subnet_group" "data" {
  name       = "data"
  subnet_ids = module.network.data_subnets[*].id
}

# DNS logs
data "aws_kms_alias" "application_log_group_encryption_key" {
  name     = "alias/opg-lpa-${var.account_name}-application-log-group-encryption-key"
  provider = aws.region
}

resource "aws_cloudwatch_log_group" "route_53_resolver_logs" {
  name              = "${data.aws_default_tags.current.tags.environment-name}-route53-resolver-logs-${data.aws_region.current.region}"
  retention_in_days = 400
  kms_key_id        = data.aws_kms_alias.application_log_group_encryption_key.target_key_arn
  provider          = aws.region
}

resource "aws_route53_resolver_query_log_config" "main" {
  name            = "main"
  destination_arn = aws_cloudwatch_log_group.route_53_resolver_logs.arn
  provider        = aws.region
}

resource "aws_route53_resolver_query_log_config_association" "main" {
  resolver_query_log_config_id = aws_route53_resolver_query_log_config.main.id
  resource_id                  = module.network.vpc.id
  provider                     = aws.region
}
